# gzinspector

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: release.yml
src/: gzip.rs  lib.rs  main.rs  models.rs  printer.rs  utils.rs
