[package]
name = "gz_inspector"
version = "0.1.0"
edition = "2021"
authors = ["Jason Grey <jason@jason-grey.com>"]
description = "A tool to inspect gzip/zlib compressed files"
license = "MIT"

[dependencies]
clap = "4.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
indicatif = "0.17"