[package]
name = "gzinspector"
version = "0.2.3"
edition = "2021"
authors = ["Jason Grey <jason@jason-grey.com>"]
description = "A tool to inspect gzip/zlib compressed files (especially chunked textual files such as WARC, WET, WAT, CDX, ZipNum, etc.)"
license = "MIT"

[dependencies]
clap = "4.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
indicatif = "0.17"